--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,19 +5,16 @@ on:
   push:
     branches: 
       - main
-      - develop
-      - 'feature/*'
   pull_request:
     branches: 
       - main
-      - develop
 
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: raadi-marketplace
   PYTHON_VERSION: '3.11'
-  ECS_CLUSTER: raadi-dev
-  ECS_SERVICE: raadi-dev-service
+  ECS_CLUSTER: raadi-marketplace-cluster
+  ECS_SERVICE: raadi-marketplace-service
 
 jobs:
   # Security and Quality Checks
@@ -153,7 +150,7 @@ jobs:
     name: Build Docker Image
     runs-on: ubuntu-latest
     needs: [security-and-quality, test]
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/main'
 
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
@@ -215,109 +212,6 @@ jobs:
         name: trivy-results
         path: trivy-report.json
 
-  # Deploy to Development
-  deploy-dev:
-    name: Deploy to Development
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/develop'
-    environment: development
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.5.0
-
-    - name: Terraform Init
-      working-directory: infrastructure/terraform/environments/dev
-      run: terraform init
-
-    - name: Terraform Plan
-      working-directory: infrastructure/terraform/environments/dev
-      run: terraform plan -var="image_tag=${{ github.sha }}"
-
-    - name: Terraform Apply
-      working-directory: infrastructure/terraform/environments/dev
-      run: terraform apply -auto-approve -var="image_tag=${{ github.sha }}"
-
-    - name: Update ECS Service
-      run: |
-        aws ecs update-service \
-          --cluster ${{ env.ECS_CLUSTER }} \
-          --service ${{ env.ECS_SERVICE }} \
-          --force-new-deployment
-
-    - name: Wait for deployment
-      run: |
-        aws ecs wait services-stable \
-          --cluster ${{ env.ECS_CLUSTER }} \
-          --services ${{ env.ECS_SERVICE }}
-
-  # Deploy to Test
-  deploy-test:
-    name: Deploy to Test
-    runs-on: ubuntu-latest
-    needs: deploy-dev
-    if: github.ref == 'refs/heads/develop'
-    environment: test
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.5.0
-
-    - name: Terraform Init
-      working-directory: infrastructure/terraform/environments/test
-      run: terraform init
-
-    - name: Terraform Plan
-      working-directory: infrastructure/terraform/environments/test
-      run: terraform plan -var="image_tag=${{ github.sha }}"
-
-    - name: Terraform Apply
-      working-directory: infrastructure/terraform/environments/test
-      run: terraform apply -auto-approve -var="image_tag=${{ github.sha }}"
-
-    - name: Update ECS Service
-      run: |
-        aws ecs update-service \
-          --cluster ${{ env.ECS_CLUSTER }} \
-          --service ${{ env.ECS_SERVICE }} \
-          --force-new-deployment
-
-    - name: Wait for deployment
-      run: |
-        aws ecs wait services-stable \
-          --cluster ${{ env.ECS_CLUSTER }} \
-          --services ${{ env.ECS_SERVICE }}
-
-    - name: Run integration tests
-      run: |
-        # Add integration tests here
-        echo "Running integration tests against test environment"
-
   # Deploy to Production
   deploy-prod:
     name: Deploy to Production
@@ -343,15 +237,15 @@ jobs:
         terraform_version: 1.5.0
 
     - name: Terraform Init
-      working-directory: infrastructure/terraform/environments/prod
+      working-directory: infrastructure/terraform
       run: terraform init
 
     - name: Terraform Plan
-      working-directory: infrastructure/terraform/environments/prod
+      working-directory: infrastructure/terraform
       run: terraform plan -var="image_tag=${{ github.sha }}"
 
     - name: Terraform Apply
-      working-directory: infrastructure/terraform/environments/prod
+      working-directory: infrastructure/terraform
       run: terraform apply -auto-approve -var="image_tag=${{ github.sha }}"
 
     - name: Blue-Green Deployment
@@ -369,12 +263,13 @@ jobs:
           --services ${{ env.ECS_SERVICE }}
 
     - name: Health check
+      working-directory: infrastructure/terraform
       run: |
         # Wait for health check to pass
         sleep 60
-        # Use your current load balancer DNS
-        HEALTH_URL="raadi-dev-alb-2008157397.us-east-1.elb.amazonaws.com"
-        curl -f "http://${HEALTH_URL}/health" || exit 1
+        # Get the load balancer DNS name from Terraform output
+        ALB_DNS=$(terraform output -raw alb_dns_name)
+        curl -f "http://${ALB_DNS}/health" || exit 1
 
     - name: Create GitHub Release
       if: success()
