--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -229,13 +229,12 @@ jobs:
         build-args: |
           BUILDKIT_INLINE_CACHE=1
 
-  # Deploy to Production
+  # Deploy to Production (Simplified - Docker Build Only)
   deploy-prod:
-    name: Deploy to Production
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
-    environment: production
 
     steps:
     - name: Checkout code
@@ -248,46 +247,51 @@ jobs:
         aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
       with:
-        terraform_version: 1.5.0
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        images: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=sha,prefix={{branch}}-
+          type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Terraform Init
-      working-directory: infrastructure/terraform
-      run: terraform init
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Terraform Plan
-      working-directory: infrastructure/terraform
-      run: terraform plan -var="image_tag=${{ github.sha }}"
+    - name: Build and push Docker image to ECR
+      id: build
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
 
-    - name: Terraform Apply
-      working-directory: infrastructure/terraform
-      run: terraform apply -auto-approve -var="image_tag=${{ github.sha }}"
-
-    - name: Blue-Green Deployment
+    - name: Deployment Summary
       run: |
-        # Update ECS service with new task definition
-        aws ecs update-service \
-          --cluster ${{ env.ECS_CLUSTER }} \
-          --service ${{ env.ECS_SERVICE }} \
-          --force-new-deployment
-
-    - name: Wait for deployment
-      run: |
-        aws ecs wait services-stable \
-          --cluster ${{ env.ECS_CLUSTER }} \
-          --services ${{ env.ECS_SERVICE }}
-
-    - name: Health check
-      working-directory: infrastructure/terraform
-      run: |
-        # Wait for health check to pass
-        sleep 60
-        # Get the load balancer DNS name from Terraform output
-        ALB_DNS=$(terraform output -raw alb_dns_name)
-        curl -f "http://${ALB_DNS}/health" || exit 1
+        echo "## 🎉 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "✅ **Docker Image Built and Pushed Successfully**" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "- **Registry**: ${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Repository**: ${{ env.ECR_REPOSITORY }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Tags**: ${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Image Digest**: ${{ steps.build.outputs.digest }}" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "🚀 **Ready for deployment to ECS or other container platforms**" >> $GITHUB_STEP_SUMMARY
 
     - name: Create GitHub Release
       if: success()
@@ -304,7 +308,7 @@ jobs:
           ${{ github.event.head_commit.message }}
           
           **Docker Image:** 
-          ${{ needs.build.outputs.image-tag }}
+          ${{ steps.meta.outputs.tags }}
           
           **Commit:** ${{ github.sha }}
         draft: false
